k8s/animeet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: animeet
  labels:
    app: animeet
spec:
  replicas: 2
  selector:
    matchLabels:
      app: animeet
  template:
    metadata:
      labels:
        app: animeet
    spec:
      containers:
      - name: animeet
        image: registry.gitlab.com/cs302-2024/g4-team7/user-interfaces/animeet/main:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
      imagePullSecrets:
      - name: gitlab-registry-access
---
apiVersion: v1
kind: Service
metadata:
  name: animeet
spec:
  type: NodePort
  selector:
    app: animeet
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 3000
