k8s/graphql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphql-service
  labels:
    app: graphql-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: graphql-service
  template:
    metadata:
      labels:
        app: graphql-service
    spec:
      containers:
      - name: graphql-service
        image: registry.gitlab.com/cs302-2024/g4-team7/graphql-gateway/main:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
      imagePullSecrets:
      - name: gitlab-registry-access
---
apiVersion: v1
kind: Service
metadata:
  name: graphql-service
spec:
  type: NodePort
  selector:
    app: graphql-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
