k8s/make-a-payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: make-a-payment-service
  labels:
    app: make-a-payment-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: make-a-payment-service
  template:
    metadata:
      labels:
        app: make-a-payment-service
    spec:
      containers:
      - name: make-a-payment-service
        image: registry.gitlab.com/cs302-2024/g4-team7/services/make-a-payment/main:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 10  # Adjust this based on your application startup time
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 10  # Adjust this as well
          periodSeconds: 10
      imagePullSecrets:
      - name: gitlab-registry-access
---
apiVersion: v1
kind: Service
metadata:
  name: make-a-payment-service
spec:
  type: ClusterIP
  selector:
    app: make-a-payment-service
  ports:
    - protocol: TCP
      port: 30006
      targetPort: 5000
